<resources>
    <string name="app_name">Cat Breeds</string>
    <string name="experimental">Experimental</string>
    <string name="hairless">Hairless</string>
    <string name="natural">Natural</string>
    <string name="rare">Rare</string>
    <string name="rex">Rex</string>
    <string name="suppressed_tail">Suppressed tail</string>
    <string name="short_legs">Short legs</string>
    <string name="hypoallergenic">Hypoallergenic</string>
    <string name="name">name</string>
    <string name="description">description</string>
    <string name="origin">Origin:</string>
    <string name="temperament">Temperament: </string>
    <string name="life_span">Life span: </string>
    <string name="adaptability">Adaptability:</string>
    <string name="affection_level">Affection level:</string>
    <string name="child_friendly">Child friendly:</string>
    <string name="grooming">Grooming:</string>
    <string name="health_issues">Health issues:</string>
    <string name="intelligence">Intelligence:</string>
    <string name="shedding_level">Shedding level:</string>
    <string name="social_needs">Social needs:</string>
    <string name="stranger_friendly">Stranger friendly:</string>
    <string name="vocalisation">Vocalisation:</string>
    <string name="cat_picture">cat picture</string>
    <string name="originFilter">Origin</string>
    <string name="temperamentFilter">Temperament</string>
    <string name="life_spanFilter">Life span</string>
    <string name="adaptabilityFilter">Adaptability</string>
    <string name="affection_levelFilter">Affection_level</string>
    <string name="child_friendlyFilter">Child friendly</string>
    <string name="groomingFilter">Grooming</string>
    <string name="health_issuesFilter">Health issues</string>
    <string name="intelligenceFilter">Intelligence</string>
    <string name="shedding_levelFilter">Shedding level</string>
    <string name="social_needsFilter">Social needs</string>
    <string name="stranger_friendlyFilter">Stranger friendly</string>
    <string name="vocalisationFilter">Vocalisation</string>
    <string name="filters">Filters</string>
    <string name="tags">Tags:</string>
    <string name="clean_filters">clean filters</string>
    <string name="tagsText">Tags</string>
    <string name="sort_by_Text">Sort by:</string>
    <string name="ok_Text">Ok</string>
    <string-array name="tags">
        <item>experimental</item>
        <item>hairless</item>
        <item>natural</item>
        <item>rare</item>
        <item>rex</item>
        <item>suppressedTail</item>
        <item>shortLegs</item>
        <item>hypoallergenic</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="see_more_photo">See more photo</string>
    <string name="no_internet_connection">Please check your internet connection, then close and open app again</string>
</resources>