<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cat_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center"
                android:layout_marginLeft="5dp"
                android:text=""
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <ImageView
                android:id="@+id/cat_item_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:contentDescription="@string/cat_picture"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                app:cardElevation="0dp"
                android:layout_marginLeft="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/cat_item_image"
                app:layout_constraintStart_toStartOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/item_experimental"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/tagItemPadding"
                        android:background="@drawable/rounded_bg"
                        android:padding="@dimen/tagItemPadding"
                        android:text="@string/experimental"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/item_hairless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/tagItemPadding"
                        android:background="@drawable/rounded_bg"
                        android:padding="@dimen/tagItemPadding"
                        android:text="@string/hairless"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/item_natural"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/tagItemPadding"
                        android:background="@drawable/rounded_bg"
                        android:padding="@dimen/tagItemPadding"
                        android:text="@string/natural"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/item_rare"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/tagItemPadding"
                        android:background="@drawable/rounded_bg"
                        android:padding="@dimen/tagItemPadding"
                        android:text="@string/rare"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/item_rex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/tagItemPadding"
                        android:background="@drawable/rounded_bg"
                        android:padding="@dimen/tagItemPadding"
                        android:text="@string/rex"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/item_suppressed_tail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/tagItemPadding"
                        android:background="@drawable/rounded_bg"
                        android:padding="@dimen/tagItemPadding"
                        android:text="@string/suppressed_tail"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/item_short_legs"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/tagItemPadding"
                        android:background="@drawable/rounded_bg"
                        android:padding="@dimen/tagItemPadding"
                        android:text="@string/short_legs"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/item_hypoallergenic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/tagItemPadding"
                        android:background="@drawable/rounded_bg"
                        android:padding="@dimen/tagItemPadding"
                        android:text="@string/hypoallergenic"
                        android:textColor="@color/white"
                        android:textSize="11sp"
                        android:visibility="gone" />
                </TableRow>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>